refactor: date null validation bug

--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -1,15 +1,5 @@
 #Spring Errors
 Size=Incorrect size.
-Size.tripForm.name=Name size should be between 6 and 100 characters.
-Pattern.tripForm.id=Invalid cuit.
-Pattern.tripForm.email=Invalid email.
-Pattern.tripForm.licensePlate=Invalid license plate.
-Pattern.tripForm.availableWeight=Minimum weight is 50kg.
-Pattern.tripForm.availableVolume=Minimum volume is 1m3.
-Size.tripForm.cargoType=Select an option.
-Size.tripForm.origin=Enter origin.
-Size.tripForm.destination=Enter destination.
-Pattern.tripForm.price=Price should be a greater than 0.
 Size.acceptForm.name=Name size should be between 6 and 100 characters.
 Pattern.acceptForm.cuit=Invalid cuit.
 Pattern.acceptForm.email=Invalid email.
@@ -22,6 +12,38 @@ ConfirmPasswordValidation.userForm=Passwords must match.
 Size.userForm.password=Password must be between 6 and 100 characters long.
 NotNull.userForm.role=Select a role.
 LoginError=Invalid credentials
+
+
+#requestForm
+Pattern.requestForm.requestedWeight=Weight should be a number greater than 50kg.
+Pattern.requestForm.requestedVolume=Volume should be a number greater than 1m3.
+Pattern.requestForm.maxPrice=Price should be greater than 0.
+NotNull.requestForm.cargoType=Select an option.
+Pattern.requestForm.minDepartureDate=Fill out this field.
+Pattern.requestForm.maxArrivalDate=Fill out this field.
+NotNull.requestForm.minDepartureDate=Fill out this field.
+NotNull.requestForm.maxArrivalDate=Fill out this field.
+PreventPast.requestForm.minDepartureDate=The date should be in the future.
+PreventPast.requestForm.maxArrivalDate=The date should be in the future.
+DateValidation.requestForm=Departure date cannot be after arrival date.
+
+
+#tripFrom
+Pattern.tripForm.departureDate=Fill out this field.
+Pattern.tripForm.arrivalDate=Fill out this field.
+Pattern.tripForm.price=Price should be greater than 0.
+DateValidation.tripForm=Departure date cannot be after arrival date.
+Pattern.tripForm.id=Invalid cuit.
+Pattern.tripForm.email=Invalid email.
+Pattern.tripForm.licensePlate=Invalid license plate.
+PreventPast.tripForm.departureDate=The date should be in the future.
+PreventPast.tripForm.arrivalDate=The date should be in the future.
+Size.tripForm.name=Name size should be between 6 and 100 characters.
+Pattern.tripForm.availableWeight=Weight should be a number greater than 50kg.
+Pattern.tripForm.availableVolume=Volume should be a number greater than 1m3.
+Size.tripForm.cargoType=Select an option.
+Size.tripForm.origin=Enter origin.
+Size.tripForm.destination=Enter destination.
 
 
 #navbar
