--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -1,27 +1,9 @@
 
 #Spring Errors
 Size=Largo incorrecto
-Size.tripForm.name=El nombre debe tener entre 6 y 100 caracteres.
-Pattern.tripForm.id=CUIT/CUIL inválido. Ejemplo: 20-12345678-1.
-Pattern.tripForm.email=Email inválido.
-Pattern.tripForm.licensePlate=Patente inválida.
-Pattern.tripForm.availableWeight=El peso mínimo es 50kg.
-Pattern.tripForm.availableVolume=Volumen mínimo es 1m3.
-Size.tripForm.cargoType=Seleccione una opción.
-Size.tripForm.origin=Ingrese origen.
-Size.tripForm.destination=Ingrese destino.
-Pattern.tripForm.price=Precio debe ser mayor a 0.
-PreventPast.tripForm.departureDate=La fecha debe ser en el futuro
-PreventPast.tripForm.arrivalDate=La fecha debe ser en el futuro
-PreventPast.requestForm.minDepartureDate=La fecha debe ser en el futuro
-PreventPast.requestForm.maxArrivalDate=La fecha debe ser en el futuro
-DateValidation.tripForm=La fecha de llegada debe ser posterior a la de salida
-DateValidation.requestForm=La fecha de llegada debe ser posterior a la de salida
 Size.acceptForm.name=El nombre debe tener entre 6 y 100 caracteres.
 Pattern.acceptForm.cuit=No es un cuit valido.
 Pattern.acceptForm.email=Email invalido.
-NotNull.tripForm=Debe completar este campo
-NotNull.tripForm.cargoType=Seleccionar una opcion
 alreadyExists=Usuario existente con este CUIT
 Size.userForm.name=El nombre debe tener entre 6 y 100 caracteres.
 Pattern.userForm.cuit=CUIT/CUIL inválido. Ejemplo: 20-12345678-1.
@@ -30,6 +12,39 @@ Pattern.userForm.name=Nombre inválido. Ejemplo: Juan Pérez
 ConfirmPasswordValidation.userForm=Las contraseñas deben coincidir.
 Size.userForm.password=La contraseña debe tener entre 6 y 100 caracteres.
 LoginError=Credenciales inválidas
+
+
+#requestForm
+Pattern.requestForm.requestedWeight=El peso debe ser un numero mayor a 50kg.
+Pattern.requestForm.requestedVolume=El volumen debe ser un numero mayor a 1m3.
+Pattern.requestForm.maxPrice=El precio debe ser mayor a 0.
+NotNull.requestForm.cargoType=Seleccione un tipo de cargamento
+Pattern.requestForm.minDepartureDate=Debe completar este campo
+Pattern.requestForm.maxArrivalDate=Debe completar este campo
+NotNull.requestForm.minDepartureDate=Debe completar este campo.
+NotNull.requestForm.maxArrivalDate=Debe completar este campo.
+PreventPast.requestForm.minDepartureDate=La fecha debe ser en el futuro.
+PreventPast.requestForm.maxArrivalDate=La fecha debe ser en el futuro.
+DateValidation.requestForm=La fecha de llegada debe ser posterior a la de salida
+
+
+#tripForm
+Size.tripForm.name=El nombre debe tener entre 6 y 100 caracteres.
+Pattern.tripForm.id=CUIT/CUIL inválido. Ejemplo: 20-12345678-1.
+Pattern.tripForm.email=Email inválido.
+Pattern.tripForm.licensePlate=Patente inválida.
+Pattern.tripForm.availableWeight=El peso mínimo es 50kg.
+Pattern.tripForm.availableVolume=Volumen mínimo es 1m3.
+Pattern.tripForm.departureDate=Debe completar este campo.
+Pattern.tripForm.arrivalDate=Debe completar este campo.
+Size.tripForm.origin=Ingrese origen.
+Size.tripForm.destination=Ingrese destino.
+Pattern.tripForm.price=Precio debe ser mayor a 0.
+PreventPast.tripForm.departureDate=La fecha debe ser en el futuro.
+PreventPast.tripForm.arrivalDate=La fecha debe ser en el futuro.
+DateValidation.tripForm=La fecha de llegada debe ser posterior a la de salida.
+NotNull.tripForm=Debe completar este campo.
+NotNull.tripForm.cargoType=Seleccione una tipo de cargamento.
 
 
 #details.jsp
@@ -55,12 +70,13 @@ ResetPasswordEmailSent=Email enviado
 SendResetPasswordEmail=Enviar email
 
 
+
+
 #navbar
 Explore=Explorar
 CreateTrip=Crear Viaje
 Trucker=Camionero
 Provider=Proveedor
-
 
 #index.jsp
 LandingMainMessage=Tu socio de confianza para el transporte de carga.
@@ -71,7 +87,6 @@ EconomicSolutions=Soluciones económicas.
 EconomicSolutionsMessage=Trabajamos con una gran variedad de ofertas de viajes para que puedas comparar precios y seleccionar la que mejor se adapta a tu negocio.
 ExploitReturns=Capitalizá las vueltas!
 ExploitReturnsMessage=Aprovechá el retorno de tus viajes ofreciendo el espacio vacío de tu camión.
-
 
 #common
 Name=Name
@@ -88,12 +103,10 @@ AvailableWeight=Peso Disponible
 Filters=Filtros
 Driver=Conductor
 
-
 #browse.jsp
 OriginDestination=Origen - Destino
 Dates=Fecha partida -  Fecha llegada
 NoTripsAvailable=No hay viajes disponibles.
-
 
 #create.jsp
 CreateTripLicensePlate=Patente
@@ -102,8 +115,6 @@ CreateTripCargoTypeNormal=Normal
 CreateTripCargoTypeHazardous=Peligrosa
 CreateTripCargoTypeRefrigerated=Refrigerada
 Select=Seleccionar
-MyTrips=Mis Viajes
-
 
 #filters.tag
 FiltersMinPrice=Precio Min
@@ -137,15 +148,12 @@ PageNotFound=Pagina no encontrada
 TripCreated=Viaje creado con éxito
 Trips.AcceptProposal=Aceptar Propuesta
 RequestCreated=Pedido creado con éxito
-ReserveSuccess=Reserva pedida con éxito
-Description=Descripcion
 
 
 #createRequests
 CreateRequest=Crear Pedido
 CreateRequestRequestedVolume=Volumen necesario
 CreateRequestRequestedWeight=Peso necesario
-MyRequests=Mis Pedidos
 
 #BrowseRequests
 NoRequestsAvailable=No hay pedidos disponibles.
@@ -153,7 +161,7 @@ NoRequestsAvailable=No hay pedidos disponibles.
 #profile
 Profile=Perfil
 
-#login
+#profile
 NewToTruckr=Nuevo en Truckr?
 SignUpNow= Registrate ahora
 ForgotPassword= Olvidaste tu contraseña?
@@ -164,4 +172,7 @@ RememberMe=Recuerdame
 Hazardous=Peligroso
 Normal=Normal
 Refrigerated=Refrigerado
+
+
+
 
