ft: myRequests working correctly

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -201,3 +201,5 @@ ViewDetails=Ver detalles >>
 #MyTrips/MyRequests
 ActiveTrips=Viajes Activos
 AcceptedTrips=Viajes Aceptados
+AcceptedRequests=Pedidos Aceptados
+ActiveRequests=Pedidos Activos
