--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -154,6 +154,8 @@ Refrigerated=Refrigerated
 #MyTrips/MyRequests
 ActiveTrips=Active Trips
 AcceptedTrips=Accepted Trips
+AcceptedRequests=Accepted Requests
+ActiveRequests=Active Requests
 
 #Mailing
 
