ft: Accept success screen

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -228,7 +228,9 @@ AcceptedTrips=Viajes Aceptados
 AcceptedRequests=Pedidos Aceptados
 ActiveRequests=Pedidos Activos
 
-
+ReserveRequestSuccess= Reserva pedida con éxito
+TripAcceptSuccess=Viaje aceptado con éxito
+RequestAcceptSuccess=Pedido aceptado con éxito
 
 
 
