--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -227,5 +227,8 @@ ResetButton=Cambiar contrase√±a
 
 AcceptedRequests=Pedidos Aceptados
 ActiveRequests=Pedidos Activos
+ReserveRequestSuccess= Reserva pedida con Èxito
+TripAcceptSuccess=Viaje aceptado con Èxito
+RequestAcceptSuccess=Pedido aceptado con Èxito
 
 
