feat: trips in progress for providers

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -228,6 +228,9 @@ AcceptedTrips=Viajes Aceptados
 AcceptedRequests=Pedidos Aceptados
 ActiveRequests=Pedidos Activos
 
+#active
+TripsInProgress=Viajes en Progreso
+
 
 
 
