--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -229,3 +229,6 @@ ResetPhrase1=We have recieved a password change request for your Truckr account.
 ResetPhrase2=If you did not ask to change your password, then you can ignore this email and your password will not be changed. The link below will remain active for 24 hours. 
 ResetButton=Reset Password
 
+#active
+TripsInProgress= Trips in Progress
+
