--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -228,4 +228,7 @@ ResetButton=Cambiar contraseña
 AcceptedRequests=Pedidos Aceptados
 ActiveRequests=Pedidos Activos
 
+#active
+TripsInProgress=Viajes en Progreso
+
 
