feat: finished user flow

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -54,6 +54,7 @@ NamePlaceholder=Pedro Gonzales
 EmailPlaceHolder=ejemplo@gmail.com
 Reserve=Reserve
 TripDetails=Detalles del viaje
+RequestDetails=Detalles de la solicitud
 Create=Crear
 CargoType=Tipo de carga
 
@@ -224,7 +225,7 @@ ViewDetails=Ver detalles >>
 
 #MyTrips/MyRequests
 ActiveTrips=Viajes Activos
-AcceptedTrips=Viajes Aceptados
+AcceptedTrips=Viajes/Propuestas Aceptadas
 AcceptedRequests=Pedidos Aceptados
 ActiveRequests=Pedidos Activos
 
