--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -88,6 +88,7 @@ AlreadyUser=Already a user?
 Details=Details
 ReserveTrip=Reserve Trip
 ReserveRequestSuccess= Reserve requested succesfully!
+RequestDetails=Request Details
 NamePlaceholder=John Doe
 EmailPlaceHolder=example@gmail.com
 Reserve=Reserve
@@ -181,7 +182,7 @@ Refrigerated=Refrigerated
 
 #MyTrips/MyRequests
 ActiveTrips=Active Trips
-AcceptedTrips=Accepted Trips
+AcceptedTrips=Accepted Trips/Requests
 AcceptedRequests=Accepted Requests
 ActiveRequests=Active Requests
 
@@ -222,6 +223,7 @@ ViewDetails=View details >>
 TripTitle=Your Trip has been confirmed!
 TripPhrase=A trip has been accepted! 
 TripDetailsTitle=TRIP DETAILS
+
 
 #resetpassword
 
