fix: translation + minor bugs

--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -94,6 +94,23 @@ EmailPlaceHolder=example@gmail.com
 Reserve=Reserve
 CargoType=Cargo type
 
+Status=Status
+ReceivedCargo=Received Cargo
+IReceivedCargo=I received the cargo
+DidntReceiveCargo=You didn't receive the cargo
+DriverCompletedTrip=Driver completed trip
+DriverDidntCompleteTrip=Driver didn't complete trip yet
+
+TripFinished=Trip finished
+
+FinishedTrip=You Finished Trip
+IFinishedTrip=I finished the trip
+DidntFinishTrip=You didn't finish the trip
+ProviderReceivedCargo=Provider received cargo
+ProviderDidntReceiveCargo=Provider didn't receive cargo
+
+AcceptedBy=Accepted by
+
 
 #browse.jsp
 OriginDestination=Origin - Destination
