--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -58,6 +58,23 @@ RequestDetails=Detalles de la solicitud
 Create=Crear
 CargoType=Tipo de carga
 
+Status=Estado actual
+ReceivedCargo=Recibiste el cargamento
+IReceivedCargo=Recibí el cargamento
+DidntReceiveCargo=No recibiste el cargamento
+DriverCompletedTrip=El conductor completó el viaje
+DriverDidntCompleteTrip=El conductor no completó el viaje aun
+
+TripFinished=Viaje finalizado
+
+FinishedTrip=Completaste el viaje.
+IFinishedTrip=Completé el viaje.
+DidntFinishTrip=No completaste el viaje.
+ProviderReceivedCargo=El proveedor recibió el cargamento.
+ProviderDidntReceiveCargo=El proveedor no recibió el cargamento.
+
+AcceptedBy=Aceptado por
+
 
 #UserManagement
 Register=Registrate
