--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -59,6 +59,26 @@ Create=Crear
 CargoType=Tipo de carga
 
 
+
+Status=Estado actual
+ReceivedCargo=Recibiste el cargamento
+IReceivedCargo=Recibí el cargamento
+DidntReceiveCargo=No recibiste el cargamento
+DriverCompletedTrip=El conductor completó el viaje
+DriverDidntCompleteTrip=El conductor no completó el viaje aun
+
+TripFinished=Viaje finalizado
+
+FinishedTrip=Completaste el viaje.
+IFinishedTrip=Completé el viaje.
+DidntFinishTrip=No completaste el viaje.
+ProviderReceivedCargo=El proveedor recibió el cargamento.
+ProviderDidntReceiveCargo=El proveedor no recibió el cargamento.
+
+AcceptedBy=Aceptado por
+
+
+
 #UserManagement
 Register=Registrate
 Logout=Cerrar Sesion
