ft: review frontend (stars and buttons not working yet and check duplicate id reference)

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -257,5 +257,15 @@ ReserveRequestSuccess= Reserva pedida con ï¿½xito
 TripAcceptSuccess=Viaje aceptado con ï¿½xito
 RequestAcceptSuccess=Pedido aceptado con ï¿½xito
 
+#Reviews
+ReviewTrucker=Califica al camionero
+ReviewProvider=Califica al proveedor
+SendReview=Enviar Calificacion
+ReviewSent=Calificacion enviada
+WriteReview=Escriba una reseña
+Review=Reseña
+
+
+
 
 
