--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -254,3 +254,14 @@ RequestAcceptSuccess=Request accepted successfully!
 #active
 TripsInProgress= Trips in Progress
 
+#Reviews
+ReviewTrucker=Review Trucker
+ReviewProvider=Review Provider
+SendReview=Send Review
+ReviewSent=Review Sent
+WriteReview=Write a review
+Review=Review
+
+
+
+
