--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -252,4 +252,14 @@ RequestAcceptSuccess=Pedido aceptado con ï¿½xito
 #active
 TripsInProgress=Viajes en Progreso
 
+#Reviews
+ReviewTrucker=Califica al camionero
+ReviewProvider=Califica al proveedor
+SendReview=Enviar Calificacion
+ReviewSent=Calificacion enviada
+WriteReview=Escriba una reseña
+Review=Reseña
+
+
+
 
