feat: first iteration of account verification

--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -254,3 +254,6 @@ RequestAcceptSuccess=Request accepted successfully!
 #active
 TripsInProgress= Trips in Progress
 
+
+verifyAccount=Verify Account
+
