ft: profile page with reviews (frontend stars still broken)

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -264,6 +264,8 @@ SendReview=Enviar Calificacion
 ReviewSent=Calificacion enviada
 WriteReview=Escriba una reseña
 Review=Reseña
+NoReviewsYet=Todavia no hay reseñas
+
 
 
 
