--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -259,6 +259,7 @@ SendReview=Enviar Calificacion
 ReviewSent=Calificacion enviada
 WriteReview=Escriba una reseña
 Review=Reseña
+NoReviewsYet=Todavia no hay reseñas
 
 
 
