--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -131,8 +131,7 @@ Register=Create Account
 Logout=Logout
 Login=Login
 ResetPassword=Reset Password
-ExpiredResetLink=The reset link has expired.
-UsedResetLink=This reset link has already been used.
+ResetPasswordError=Invalid link or expired.
 ResetPasswordEmailSentDetails=An email has been sent to your account with instructions to reset your password.
 ResetPasswordEmailSent=Email sent!
 SendResetPasswordEmail=Send Email
@@ -158,8 +157,8 @@ FiltersSortArrivalDateDesc=Arrival Date (Desc)
 
 #errors
 404Error=Error 404
-404TripMsg=Trip not found
-TryAgain=Please try again. If the error persists, contact support.
+404TripRequestMsg=Trip or request not found
+TryAgain=If you think this is an error, please contact support.
 GoBack=Go Back
 500Error=Error 500
 500ErrorCode=Internal Server Error
