feat: last update status

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -59,7 +59,7 @@ Create=Crear
 CargoType=Tipo de carga
 
 
-
+LastUpdate=Ultima actualizacion
 Status=Estado actual
 ReceivedCargo=Recibiste el cargamento
 IReceivedCargo=Recibí el cargamento
