--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -94,6 +94,7 @@ EmailPlaceHolder=example@gmail.com
 Reserve=Reserve
 CargoType=Cargo type
 
+LastUpdate=Last Update
 Status=Status
 ReceivedCargo=Received Cargo
 IReceivedCargo=I received the cargo
