--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -61,6 +61,7 @@ CargoType=Tipo de carga
 
 
 Status=Estado actual
+LastUpdate=Ultima actualizacion
 ReceivedCargo=Recibiste el cargamento
 IReceivedCargo=Recibí el cargamento
 DidntReceiveCargo=No recibiste el cargamento
