feat: register feedback + verifyEmail style

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -83,6 +83,9 @@ AcceptedBy=Aceptado por
 Register=Registrate
 Logout=Cerrar Sesion
 Login=Iniciar Sesion
+VerifyAccount=Verificar Cuenta
+CheckEmailVerification=Por favor, verifique su casilla de correo para activar su cuenta.
+RegisterSuccess=Registro exitoso!
 ResetPassword=Reestablecer Contrasena
 ResetPasswordError=Link invalido o expírado.
 ResetPasswordEmailSentDetails=Se ha enviado un email a su casilla de correo con un link para reestablecer su contrasena.
