--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -131,6 +131,9 @@ MyTrips=My Trips
 Register=Create Account
 Logout=Logout
 Login=Login
+VerifyAccount=Verify Account
+CheckEmailVerification=Please check your email for a verification link.
+RegisterSuccess=Account created succesfully!
 ResetPassword=Reset Password
 ResetPasswordError=Invalid link or expired.
 ResetPasswordEmailSentDetails=An email has been sent to your account with instructions to reset your password.
