--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -257,12 +257,14 @@ ReviewTrucker=Califica al camionero
 ReviewProvider=Califica al proveedor
 SendReview=Enviar Calificacion
 ReviewSent=Calificacion enviada
-WriteReview=Escriba una reseña
-Review=Reseña
+WriteReview=Escriba una reseï¿½a
+Review=Reseï¿½a
 
 
 
 
 verifyAccount=Verify Account
+
+editProfile=Editar Perfil
 
 
