ft: en el merch

--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -117,6 +117,8 @@ AcceptedBy=Accepted by
 OriginDestination=Origin - Destination
 Dates=Departure date -  Arrival date
 NoTripsAvailable=No trips available.
+ExploreTrips=Explore Trips
+ExploreRequests=Explore Requests
 
 #create.jsp
 CreateTripLicensePlate=License plate
