--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -138,6 +138,8 @@ AlreadyUser=¿Ya tienes una cuenta?
 OriginDestination=Origen - Destino
 Dates=Fecha partida -  Fecha llegada
 NoTripsAvailable=No hay viajes disponibles.
+ExploreTrips=Explorar Viajes
+ExploreRequests=Explorar Pedidos
 
 
 #create.jsp
