ft: password reset feedback

--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -92,6 +92,8 @@ ResetPasswordError=Link invalido o expírado.
 ResetPasswordEmailSentDetails=Se ha enviado un email a su casilla de correo con un link para reestablecer su contrasena.
 ResetPasswordEmailSent=Email enviado
 SendResetPasswordEmail=Enviar email
+ResetPasswordSuccess=Reestablecimiento exitoso!
+ResetPasswordSuccessDetails=Su contraseña ha sido reestablecida exitosamente. Por favor, inicie sesion con su nueva contraseña.
 
 
 
