--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -141,6 +141,8 @@ ResetPasswordError=Invalid link or expired.
 ResetPasswordEmailSentDetails=An email has been sent to your account with instructions to reset your password.
 ResetPasswordEmailSent=Email sent!
 SendResetPasswordEmail=Send Email
+ResetPasswordSuccess=Password reset succesfully!
+ResetPasswordSuccessDetails=Your password has been reset successfully. You can now login with your new password.
 
 
 #filters.tag
