--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -52,7 +52,7 @@ Details=Detalles
 ReserveTrip=Reservar Viaje
 NamePlaceholder=Pedro Gonzales
 EmailPlaceHolder=ejemplo@gmail.com
-Reserve=Reserve
+Reserve=Reservar
 TripDetails=Detalles del viaje
 RequestDetails=Detalles de la solicitud
 Create=Crear
