--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -276,4 +276,7 @@ verifyAccount=Verificar Cuenta
 
 editProfile=Editar Perfil
 
+uploadProfile=Subir Foto de Perfil:
+uploadTrip=Subir Foto de Viaje:
+
 
