--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -279,3 +279,6 @@ verifyAccount=Verify Account
 
 editProfile=Edit Profile
 
+uploadProfile=Upload Profile Picture:
+uploadTrip=Upload Trip Picture:
+
