--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -279,3 +279,5 @@ verifyAccount=Verify Account
 
 editProfile=Editar Perfil
 
+uploadProfile=Subir Foto de Perfil:
+uploadTrip=Subir Foto de Viaje:
