fix: lots of UX improvements

--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -278,7 +278,8 @@ NoReviewsYet=No reviews yet
 verifyAccount=Verify Account
 
 editProfile=Edit Profile
+saveEdits=Save
 
-uploadProfile=Upload Profile Picture:
-uploadTrip=Upload Trip Picture:
+uploadProfile=Upload Profile Picture
+uploadTrip=Upload Trip Picture
 
