--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -268,6 +268,7 @@ SendReview=Enviar Calificacion
 ReviewSent=Calificacion enviada
 WriteReview=Escriba una reseña
 Review=Reseña
+NoReviewsYet=Todavia no hay reseñas
 
 
 
@@ -275,8 +276,9 @@ Review=Reseña
 verifyAccount=Verificar Cuenta
 
 editProfile=Editar Perfil
+saveEdits=Guardar Cambios
 
-uploadProfile=Subir Foto de Perfil:
-uploadTrip=Subir Foto de Viaje:
+uploadProfile=Subir Foto de Perfil
+uploadTrip=Subir Foto de Viaje
 
 
