feat: statusmails and fixes

--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -282,3 +282,11 @@ editProfile=Edit Profile
 uploadProfile=Upload Profile Picture:
 uploadTrip=Upload Trip Picture:
 
+
+TripCompleted=Trip Completed
+TripCompletedDetails=The trip has been completed successfully.Thank you for chosing Truckr!
+CompletionDate=Completion Date:
+
+StatusUpdate=Trip Status Update
+StatusUpdatePhrase=The status of your trip has been updated.
+ViewStatus=View Status
