--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -281,3 +281,11 @@ editProfile=Editar Perfil
 
 uploadProfile=Subir Foto de Perfil:
 uploadTrip=Subir Foto de Viaje:
+
+TripCompleted=¡Tu viaje ha sido completado con éxito!
+TripCompletedDetails=¡Gracias por usar Truckr! Esperamos que hayas tenido una buena experiencia.
+CompletionDate=Fecha de finalizacion:
+
+StatusUpdate=Actualizacion del estado de tu viaje
+StatusUpdatePhrase=Ha habido un cambio en el estado de tu viaje.
+ViewStatus=Ver estado del viaje
