--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -75,14 +75,14 @@ IFinishedTrip=Completé el viaje.
 DidntFinishTrip=No completaste el viaje.
 ProviderReceivedCargo=El proveedor recibió el cargamento.
 ProviderDidntReceiveCargo=El proveedor no recibió el cargamento.
+NoProposalsYet=Todavía no hay propuestas para este pedido/viaje.
 
 AcceptedBy=Aceptado por
 
 
 
 #UserManagement
-Register=Registrate
-Logout=Cerrar Sesion
+Register=Crear Cuenta
 Login=Iniciar Sesion
 VerifyAccount=Verify Account
 CheckEmailVerification=Por favor, verifique su casilla de correo para activar su cuenta.
