feat: email validation check on login

--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -11,7 +11,6 @@ Pattern.userForm.name=Invalid name. Eg: John Doe
 ConfirmPasswordValidation.userForm=Passwords must match.
 Size.userForm.password=Password must be between 6 and 100 characters long.
 NotNull.userForm.role=Select a role.
-LoginError=Invalid credentials
 
 
 #requestForm
@@ -134,6 +133,8 @@ MyTrips=My Trips
 Register=Create Account
 Logout=Logout
 Login=Login
+InvalidCredentials=Invalid credentials.
+UserNotVerified=Your account has not been verified yet.
 VerifyAccount=Verify Account
 CheckEmailVerification=Please check your email for a verification link.
 RegisterSuccess=Account created succesfully!
