--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -11,7 +11,6 @@ Pattern.userForm.email=Email inválido.
 Pattern.userForm.name=Nombre inválido. Ejemplo: Juan Pérez
 ConfirmPasswordValidation.userForm=Las contraseñas deben coincidir.
 Size.userForm.password=La contraseña debe tener entre 6 y 100 caracteres.
-LoginError=Credenciales inválidas
 
 
 #requestForm
@@ -84,6 +83,8 @@ AcceptedBy=Aceptado por
 #UserManagement
 Register=Crear Cuenta
 Login=Iniciar Sesion
+InvalidCredentials=Credenciales invalidas
+UserNotVerified=Usuario no verificado aun.
 VerifyAccount=Verify Account
 CheckEmailVerification=Por favor, verifique su casilla de correo para activar su cuenta.
 RegisterSuccess=Registro exitoso!
