feat: landing styling

--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -52,10 +52,13 @@ Trucker=Trucker
 Provider=Provider
 
 #index.jsp
-LandingMainMessage=Your trustworthy partner for cargo transport.
-LandingMainSubMessage=Optimize your shipment's logistics with our intuitive platform. Communicate with drivers and coordinate shipments.
+ThisIs=This is
+Truckr=Truckr.
+ThisIsTruckr=This is Truckr.
+LandingMainMessage=The platform that connects drivers and cargo providers.
+LandingMainSubMessage=Choose a role as trucker or provider and start trucking!
 TrustworthyTruckers=Trustworthy drivers.
-TrustworthyTruckersMessage=Our team is big! We count on trustworthy drivers to make sure your cargo gets to its destination safely and efficiently.
+TrustworthyTruckersMessage=Our team is big! We count with great drivers to make sure your cargo gets to its destination safely and efficiently.
 EconomicSolutions=Inexpensive solutions.
 EconomicSolutionsMessage=We work with a wide variety of trip offers for you to compare prices and select your company's best fit.
 ExploitReturns=Capitalize on returns!
