--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -106,8 +106,11 @@ Trucker=Camionero
 Provider=Proveedor
 
 #index.jsp
-LandingMainMessage=Tu socio de confianza para el transporte de carga.
-LandingMainSubMessage=Optimizá la logística de tus envíos con nuestra plataforma intuitiva que permite ver el perfil de los transportistas, coordinar envíos y comunicarte con ellos.
+ThisIs=Esto es
+Truckr=Truckr.
+ThisIsTruckr=Esto es Truckr.
+LandingMainMessage=La plataforma que conecta camioneros y proveedores de mercadería.
+LandingMainSubMessage=Determina tu rol de camionero o proveedor y comienza a utilizar la plataforma!
 TrustworthyTruckers=Transportistas confiables.
 TrustworthyTruckersMessage=Contamos con una amplia seleccion de transportistas confiables para asegurarnos de que tu carga llegue a su destino final de manera segura y eficiente.
 EconomicSolutions=Soluciones económicas.
