refactor: verify account fixes

--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -11,6 +11,8 @@ Pattern.userForm.name=Invalid name. Eg: John Doe
 ConfirmPasswordValidation.userForm=Passwords must match.
 Size.userForm.password=Password must be between 6 and 100 characters long.
 NotNull.userForm.role=Select a role.
+Pattern.verifyAccountForm.token=Incorrect token.
+IncorrectToken=Incorrect token.
 
 
 #requestForm
@@ -137,7 +139,7 @@ Register=Create Account
 Logout=Logout
 Login=Login
 InvalidCredentials=Invalid credentials.
-UserNotVerified=Your account has not been verified yet.
+UserNotVerified=User not verified, check your email.
 VerifyAccount=Verify Account
 CheckEmailVerification=Please check your email for a verification link.
 RegisterSuccess=Account created succesfully!
