--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -11,6 +11,8 @@ Pattern.userForm.email=Email inválido.
 Pattern.userForm.name=Nombre inválido. Ejemplo: Juan Pérez
 ConfirmPasswordValidation.userForm=Las contraseñas deben coincidir.
 Size.userForm.password=La contraseña debe tener entre 6 y 100 caracteres.
+Pattern.verifyAccountForm.token=Token incorrecto.
+IncorrectToken=Token incorrecto.
 
 
 #requestForm
@@ -84,11 +86,11 @@ AcceptedBy=Aceptado por
 Register=Crear Cuenta
 Login=Iniciar Sesion
 InvalidCredentials=Credenciales invalidas
-UserNotVerified=Usuario no verificado aun.
-VerifyAccount=Verify Account
+UserNotVerified=Usuario no verificado, chequee su email.
+VerifyAccount=Verificar Cuenta
 CheckEmailVerification=Por favor, verifique su casilla de correo para activar su cuenta.
 RegisterSuccess=Registro exitoso!
-ResetPassword=Reestablecer Contrasena
+ResetPassword=Reestablecer Contraseña
 ResetPasswordError=Link invalido o expírado.
 ResetPasswordEmailSentDetails=Se ha enviado un email a su casilla de correo con un link para reestablecer su contrasena.
 ResetPasswordEmailSent=Email enviado
@@ -280,7 +282,7 @@ NoReviewsYet=Todavia no hay reseñas
 
 
 
-verifyAccount=Verify Account
+verifyAccount=Verificar Cuenta
 
 editProfile=Editar Perfil
 saveEdits=Guardar Cambios
