feat: proposalNotFound exception controller

--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -173,6 +173,7 @@ FiltersSortArrivalDateDesc=Arrival Date (Desc)
 #errors
 404Error=Error 404
 404TripRequestMsg=Trip or request not found
+404ProposalMsg=Proposal not found
 TryAgain=If you think this is an error, please contact support.
 GoBack=Go Back
 500Error=Error 500
