--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -181,6 +181,7 @@ FiltersSortArrivalDateDesc=Fecha de salida (Desc)
 #errors
 404Error=Error 404
 404TripRequestMsg=Viaje o pedido no encontrado
+404ProposalMsg=Propuesta no encontrada
 TryAgain=Su usted cree que esto es un error contacte soporte.
 GoBack=Volver atrás
 500Error=Error 500
