fixes: i18n and c:url

--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -51,7 +51,9 @@ Size.tripForm.destination=Enter destination.
 Explore=Explore
 CreateTrip=Create Trip
 Trucker=Trucker
+TRUCKER=Trucker
 Provider=Provider
+PROVIDER=Provider
 
 #index.jsp
 ThisIs=This is
@@ -77,11 +79,13 @@ DepartureDate=Departure Date
 ArrivalDate=Arrival Date
 Price=Price
 AvailableVolume=Avl. Volume
+NecessaryVolume=Necessary Volume
 AvailableWeight=Avl. Weight
+NecessaryWeight=Necessary Weight
 Filters=Filters
 Driver=Driver
 Create=Create
-Role=Rol
+Role=Role
 ProviderMessage=I'm a provider! I will fill the truck with my cargo
 TruckerMessage=I'm a trucker! I will take your cargo where you need
 ConfirmPassword=Confirm Password
@@ -91,6 +95,7 @@ AlreadyUser=Already a user?
 #details.jsp
 Details=Details
 ReserveTrip=Reserve Trip
+ReserveRequest=Reserve Request
 ReserveRequestSuccess= Reserve requested succesfully!
 RequestDetails=Request Details
 NamePlaceholder=John Doe
@@ -275,6 +280,7 @@ ReviewProvider=Review Provider
 SendReview=Send Review
 ReviewSent=Review Sent
 WriteReview=Write a review
+WriteDescription=Write a description
 Review=Review
 NoReviewsYet=No reviews yet
 
