--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -51,6 +51,7 @@ NotNull.tripForm.cargoType=Seleccione una tipo de cargamento.
 #details.jsp
 Details=Detalles
 ReserveTrip=Reservar Viaje
+ReserveRequest=Reservar Pedido
 NamePlaceholder=Pedro Gonzales
 EmailPlaceHolder=ejemplo@gmail.com
 Reserve=Reservar
@@ -102,7 +103,9 @@ ResetPasswordSuccessDetails=Su contraseña ha sido reestablecida exitosamente. P
 Explore=Explorar
 CreateTrip=Crear Viaje
 Trucker=Camionero
+TRUCKER=Camionero
 Provider=Proveedor
+PROVIDER=Proveedor
 
 #index.jsp
 ThisIs=Esto es
@@ -130,7 +133,9 @@ DepartureDate=Fecha de salida
 ArrivalDate=Fecha de llegada
 Price=Precio
 AvailableVolume=Volumen Disponible
+NecessaryVolume=Volumen Necesario
 AvailableWeight=Peso Disponible
+NecessaryWeight=Peso Necesario
 Filters=Filtros
 Driver=Conductor
 ProviderMessage=¡Soy proveedor! Solicitaré transporte de mercadería
@@ -274,6 +279,7 @@ ReviewProvider=Califica al proveedor
 SendReview=Enviar Calificacion
 ReviewSent=Calificacion enviada
 WriteReview=Escriba una reseña
+WriteDescription=Escriba una descripcion
 Review=Reseña
 NoReviewsYet=Todavia no hay reseñas
 
