--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -76,7 +76,7 @@ IFinishedTrip=Completé el viaje.
 DidntFinishTrip=No completaste el viaje.
 ProviderReceivedCargo=El proveedor recibió el cargamento.
 ProviderDidntReceiveCargo=El proveedor no recibió el cargamento.
-NoProposalsYet=Todavía no hay propuestas para este pedido/viaje.
+NoProposalsYet=Todavía no hay propuestas para esta publicacion.
 
 AcceptedBy=Aceptado por
 
@@ -178,7 +178,7 @@ FiltersSortPriceDesc=Precio (Desc)
 FiltersSortDepartureDateAsc=Fecha de salida (Asc)
 FiltersSortDepartureDateDesc=Fecha de salida (Desc)
 FiltersSortArrivalDateAsc=Fecha de llegada (Asc)
-FiltersSortArrivalDateDesc=Fecha de salida (Desc)
+FiltersSortArrivalDateDesc=Fecha de llegada (Desc)
 
 #errors
 404Error=Error 404
