--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -110,7 +110,7 @@ IReceivedCargo=I received the cargo
 DidntReceiveCargo=You didn't receive the cargo
 DriverCompletedTrip=Driver completed trip
 DriverDidntCompleteTrip=Driver didn't complete trip yet
-NoProposalsYet=No proposals yet for this trip/request.
+NoProposalsYet=No proposals yet for this publication.
 
 TripFinished=Trip finished
 
