--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -107,6 +107,24 @@ TRUCKER=Camionero
 Provider=Proveedor
 PROVIDER=Proveedor
 
+#NEW navbar
+BrowseCargo=Buscar Carga
+BrowseTrips=Buscar Viajes
+MyItinerary=Mi Itinerario
+MyPublications=Mis Publicaciones
+MyOffers=Mis Ofertas
+
+#MyOffers
+OffersSent=Ofertas Enviadas
+Cancel=Cancelar
+
+#MyPublications
+ActivePublications=Publicaciones Activas
+ExpiredPublications=Publicaciones Expiradas
+CreatePublication=Crear Publicacion
+NoActivePublications=Todavia no tienes publicaciones activas.
+NoExpiredPublications=Todavia no tienes publicaciones expiradas.
+
 #index.jsp
 ThisIs=Esto es
 Truckr=Truckr.
@@ -208,8 +226,17 @@ MyRequests=Mis Pedidos
 #BrowseRequests
 NoRequestsAvailable=No hay pedidos disponibles.
 
+#MyItinerary
+OngoingTrips=Viajes en curso
+FutureTrips=Viajes futuros
+ViewPastTrips=Ver viajes pasados
+
 #profile
 Profile=Perfil
+CompletedTrips=Viajes Completados
+editProfile=Editar Perfil
+saveEdits=Guardar Cambios
+uploadProfile=Subir Foto de Perfil
 
 #profile
 NewToTruckr=Nuevo en Truckr?
@@ -287,11 +314,6 @@ NoReviewsYet=Todavia no hay reseñas
 
 
 verifyAccount=Verificar Cuenta
-
-editProfile=Editar Perfil
-saveEdits=Guardar Cambios
-
-uploadProfile=Subir Foto de Perfil
 uploadTrip=Subir Foto de Viaje
 
 TripCompleted=¡Tu viaje ha sido completado con éxito!
