--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -55,6 +55,24 @@ TRUCKER=Trucker
 Provider=Provider
 PROVIDER=Provider
 
+#NEW navbar
+BrowseCargo=Browse Cargo
+BrowseTrips=Browse Trips
+MyItinerary=My Itinerary
+MyPublications=My Publications
+MyOffers=My Offers
+
+#MyOffers
+OffersSent=Offers Sent
+Cancel=Cancel
+
+#MyPublications
+ActivePublications=Active Publications
+ExpiredPublications=Expired Publications
+CreatePublication=Create Publication
+NoActivePublications=You don't have active publications yet.
+NoExpiredPublications=You don't have expired publications yet.
+
 #index.jsp
 ThisIs=This is
 Truckr=Truckr.
@@ -202,8 +220,17 @@ MyRequests=My Requests
 #BrowseRequests
 NoRequestsAvailable=No requests available.
 
+#MyItinerary
+OngoingTrips=Viajes en curso
+FutureTrips=Viajes futuros
+ViewPastTrips=Ver viajes pasados
+
 #profile
 Profile=Profile
+CompletedTrips=Completed Trips
+editProfile=Edit Profile
+saveEdits=Save Edits
+uploadProfile=Upload Profile Picture
 
 #login
 NewToTruckr=New to Truckr?
@@ -290,11 +317,6 @@ NoReviewsYet=No reviews yet
 
 
 verifyAccount=Verify Account
-
-editProfile=Edit Profile
-saveEdits=Save
-
-uploadProfile=Upload Profile Picture
 uploadTrip=Upload Trip Picture
 
 
