--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -61,9 +61,8 @@ Create=Crear
 CargoType=Tipo de carga
 
 
-
-Status=Estado actual
 LastUpdate=Ultima actualizacion
+Status=Estado actual
 ReceivedCargo=Recibiste el cargamento
 IReceivedCargo=Recibí el cargamento
 DidntReceiveCargo=No recibiste el cargamento
@@ -91,15 +90,13 @@ UserNotVerified=Usuario no verificado, chequee su email.
 VerifyAccount=Verificar Cuenta
 CheckEmailVerification=Por favor, verifique su casilla de correo para activar su cuenta.
 RegisterSuccess=Registro exitoso!
-ResetPassword=Reestablecer Contraseña
+ResetPassword=Reestablecer Contrasena
 ResetPasswordError=Link invalido o expírado.
-ResetPasswordEmailSentDetails=Se ha enviado un email a su casilla de correo con un link para reestablecer su contrasena.
+ResetPasswordEmailSentDetails=Se ha enviado un email a su casilla de correo con un link para reestablecer su contraseña.
 ResetPasswordEmailSent=Email enviado
 SendResetPasswordEmail=Enviar email
 ResetPasswordSuccess=Reestablecimiento exitoso!
 ResetPasswordSuccessDetails=Su contraseña ha sido reestablecida exitosamente. Por favor, inicie sesion con su nueva contraseña.
-
-
 
 
 #navbar
@@ -109,6 +106,24 @@ Trucker=Camionero
 TRUCKER=Camionero
 Provider=Proveedor
 PROVIDER=Proveedor
+
+#NEW navbar
+BrowseCargo=Buscar Carga
+BrowseTrips=Buscar Viajes
+MyItinerary=Mi Itinerario
+MyPublications=Mis Publicaciones
+MyOffers=Mis Ofertas
+
+#MyOffers
+OffersSent=Ofertas Enviadas
+Cancel=Cancelar
+
+#MyPublications
+ActivePublications=Publicaciones Activas
+ExpiredPublications=Publicaciones Expiradas
+CreatePublication=Crear Publicacion
+NoActivePublications=Todavia no tienes publicaciones activas.
+NoExpiredPublications=Todavia no tienes publicaciones expiradas.
 
 #index.jsp
 ThisIs=Esto es
@@ -211,8 +226,17 @@ MyRequests=Mis Pedidos
 #BrowseRequests
 NoRequestsAvailable=No hay pedidos disponibles.
 
+#MyItinerary
+OngoingTrips=Viajes en curso
+FutureTrips=Viajes futuros
+ViewPastTrips=Ver viajes pasados
+
 #profile
 Profile=Perfil
+CompletedTrips=Viajes Completados
+editProfile=Editar Perfil
+saveEdits=Guardar Cambios
+uploadProfile=Subir Foto de Perfil
 
 #profile
 NewToTruckr=Nuevo en Truckr?
@@ -290,13 +314,7 @@ NoReviewsYet=Todavia no hay reseñas
 
 
 verifyAccount=Verificar Cuenta
-
-editProfile=Editar Perfil
-saveEdits=Guardar Cambios
-
-
-uploadProfile=Subir Foto de Perfil:
-uploadTrip=Subir Foto de Viaje:
+uploadTrip=Subir Foto de Viaje
 
 TripCompleted=¡Tu viaje ha sido completado con éxito!
 TripCompletedDetails=¡Gracias por usar Truckr! Esperamos que hayas tenido una buena experiencia.
@@ -305,3 +323,5 @@ CompletionDate=Fecha de finalizacion:
 StatusUpdate=Actualizacion del estado de tu viaje
 StatusUpdatePhrase=Ha habido un cambio en el estado de tu viaje.
 ViewStatus=Ver estado del viaje
+
+
