--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -65,6 +65,7 @@ MyOffers=My Offers
 #MyOffers
 OffersSent=Offers Sent
 Cancel=Cancel
+NoOffersSent=You don't have offers sent yet.
 
 #MyPublications
 ActivePublications=Active Publications
