--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -117,6 +117,7 @@ MyOffers=Mis Ofertas
 #MyOffers
 OffersSent=Ofertas Enviadas
 Cancel=Cancelar
+NoOffersSent=Todavia no has enviado ninguna oferta.
 
 #MyPublications
 ActivePublications=Publicaciones Activas
