fix: landing redirect index, change name error messages

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -47,6 +47,10 @@ DateValidation.tripForm=La fecha de llegada debe ser posterior a la de salida.
 NotNull.tripForm=Debe completar este campo.
 NotNull.tripForm.cargoType=Seleccione una tipo de cargamento.
 
+#EditUserForm
+Pattern.editUserForm.name=Nombre inválido. Ejemplo: Juan Pérez
+Size.editUserForm.name=El nombre debe tener entre 6 y 100 caracteres.
+
 
 #details.jsp
 Details=Detalles
