--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -14,6 +14,10 @@ NotNull.userForm.role=Select a role.
 Pattern.verifyAccountForm.token=Incorrect token.
 IncorrectToken=Incorrect token.
 
+#EditUserForm
+Pattern.editUserForm.name=Invalid name. Eg: John Doe
+Size.editUserForm.name=Name must be between 6 and 100 characters long.
+
 
 #requestForm
 Pattern.requestForm.requestedWeight=Weight should be a number greater than 50kg.
