--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -14,6 +14,10 @@ Size.userForm.password=La contraseña debe tener entre 6 y 100 caracteres.
 Pattern.verifyAccountForm.token=Token incorrecto.
 IncorrectToken=Token incorrecto.
 
+#EditUserForm
+Pattern.editUserForm.name=Nombre inválido. Ejemplo: Juan Pérez
+Size.editUserForm.name=El nombre debe tener entre 6 y 100 caracteres.
+
 
 #requestForm
 Pattern.requestForm.requestedWeight=El peso debe ser un numero mayor a 50kg.
