--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -226,9 +226,12 @@ MyRequests=My Requests
 NoRequestsAvailable=No requests available.
 
 #MyItinerary
-OngoingTrips=Viajes en curso
-FutureTrips=Viajes futuros
-ViewPastTrips=Ver viajes pasados
+OngoingTrips=Ongoing Trips
+FutureTrips=Future Trips
+ViewPastTrips=View Past Trips
+NoOngoingTrips=No ongoing trips.
+NoFutureTrips=No future trips.
+NoPastTrips=No past trips.
 
 #profile
 Profile=Profile
