--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -235,6 +235,9 @@ NoRequestsAvailable=No hay pedidos disponibles.
 OngoingTrips=Viajes en curso
 FutureTrips=Viajes futuros
 ViewPastTrips=Ver viajes pasados
+NoOngoingTrips=No tienes viajes en curso.
+NoFutureTrips=No tienes viajes futuros.
+NoPastTrips=No tienes viajes pasados.
 
 #profile
 Profile=Perfil
