fix:message change

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -116,7 +116,7 @@ BrowseCargo=Buscar Carga
 BrowseTrips=Buscar Viajes
 MyItinerary=Mi Itinerario
 MyPublications=Mis Publicaciones
-MyOffers=Mis Ofertas
+MyOffers=Ofertas Enviadas
 
 #MyOffers
 OffersSent=Ofertas Enviadas
