--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -64,7 +64,7 @@ BrowseCargo=Browse Cargo
 BrowseTrips=Browse Trips
 MyItinerary=My Itinerary
 MyPublications=My Publications
-MyOffers=My Offers
+MyOffers=Sent Offers
 
 #MyOffers
 OffersSent=Offers Sent
